# MinuteMeeting

./: .cspell.json  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  minute_meeting.spec  pyproject.toml
.github/workflows/: build-windows.yml
installer/: minute_meeting.iss
minute_meeting/: __init__.py  main.py
minute_meeting/audio/: extractor.py  loopback.py  preprocessor.py  recorder.py
minute_meeting/diarization/: clustering.py  speaker.py  vad.py
minute_meeting/transcription/: transcriber.py
minute_meeting/ui/: main_window.py  worker.py
minute_meeting/ui/styles/: dark.qss  main.qss
minute_meeting/ui/widgets/: recorder_widget.py  settings_dialog.py  transcript_widget.py
minute_meeting/utils/: device.py  env_check.py  paths.py
scripts/: build.py
tests/: test_basic.py  test_device.py  test_extractor.py  test_loopback.py  test_preprocessor.py  test_worker.py
